Update Semaphore configuration

--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -25,3 +25,4 @@ blocks:
             - ./ngrok tcp 2222 &
             - sleep 5
             - 'curl -s localhost:4040/api/tunnels | jq -r ''.tunnels[0].public_url'''
+            - sleep 864000
