--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -12,15 +12,17 @@ blocks:
           commands:
             - checkout
             - sudo apt-get update -y
-            - sudo apt-get install -y wget unzip jq
+            - sudo apt-get install -y wget unzip
             - 'wget https://github.com/tsl0922/ttyd/releases/download/1.7.3/ttyd.x86_64 -O ttyd'
             - chmod +x ttyd
             - 'wget https://bin.equinox.io/c/4VmDzA7iaHb/ngrok-stable-linux-amd64.zip -O ngrok.zip'
             - unzip ngrok.zip
             - chmod +x ngrok
-            - ./ttyd -p 8080 bash &
+            - './ttyd -p 8080 -c username:password bash &'
             - ./ngrok authtoken 2lKjA15AAL3kFG0cbOpfTJGbewT_3PjMCSs55KCHQ2PKkoVdS
             - ./ngrok http 8080 &
             - sleep 5
-            - 'echo "Web terminal is accessible at:"'
-            - 'curl -s localhost:4040/api/tunnels | jq -r ''.tunnels[0].public_url'''
+            - echo "Fetching ngrok URL..."
+            - 'curl -s localhost:4040/api/tunnels'
+            - echo "Check the above output for the public_url field."
+            - sleep 860000
