--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -2,8 +2,10 @@ version: v1.0
 name: Web-Based Terminal Pipeline
 agent:
   machine:
-    type: f1-standard-2
+    type: f1-standard-4
     os_image: ubuntu2204
+    execution_time_limit: null
+  hours: 24
 blocks:
   - name: Setup Web-Based Terminal
     task:
