--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -4,7 +4,7 @@ agent:
   machine:
     type: f1-standard-4
     os_image: ubuntu2204
-    execution_time_limit: null
+execution_time_limit:
   hours: 24
 blocks:
   - name: Setup Web-Based Terminal
